Comment about update added

--- a/2-3_optional/Assigment_2-3_optional_KP.ipynb
+++ b/2-3_optional/Assigment_2-3_optional_KP.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis of [Avocado Sales 2015/21 in U.S.](https://www.kaggle.com/datasets/valentinjoseph/avocado-sales-20152021-us-centric) by **Kacper Piątkowski**"
+    "# Analysis of [Avocado Sales 2015/21 in U.S.](https://www.kaggle.com/datasets/valentinjoseph/avocado-sales-20152021-us-centric) by **Kacper Piątkowski**\n",
+    "\n",
+    "<span style=\"color: red; font-weight: bold;\">The updated version 2 includes the addition of the analysis with standarization, bias and GDM</span> [**beginning here**](#version2)"
    ]
   },
   {
@@ -826,6 +828,14 @@
     "    Lastly I've wanted to make a regression model for the average price to total volume.\n",
     "\n",
     "    I chose the 2nd degree polynomial - as it achieved a good score (comparing to the other ones) and when comparing to the previous model (total volume to average price) it achieved a better one - meaning that predicting the total volume based on the average price would be better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VERSION 2\n",
+    "<a id='version2'></a>"
    ]
   },
   {
